--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -1,11 +1,10 @@
 /** @file
- *  @brief Define signatures to enable a number of NCEPLIBS-bufr subprograms to be called
- *  from within the C part of the library.
+ *  @brief Enable a number of NCEPLIBS-bufr subprograms to be called from within
+ *  the C part of the library.
  *
- *  This header file defines signatures which wrap
- *  a number of native Fortran subroutines in the library.  It also contains prototypes
- *  for native C functions in the library as well as macros used throughout the C part
- *  of the library.
+ *  This header file defines signatures which wrap a number of native Fortran subprograms
+ *  in the library.  It also contains prototypes for native C functions in the library as
+ *  well as macros used throughout the C part of the library.
  *
  *  @author J.Ator @date 2003-11-04
  */
@@ -28,7 +27,6 @@ void closfb(int nfile);
 int crdbufr(int nfile, int *bufr, int mxwrd);
 void cwrbufr(int nfile, int *bufr, int nwrd);
 void bort_exit(void);
-int cmpia(const void *pf1, const void *pf2);
 int icvidx(int ii, int jj, int numjj);
 
 /** Maximum number of BUFR files that can be connected to the NCEPLIBS-bufr
@@ -49,6 +47,63 @@ int icvidx(int ii, int jj, int numjj);
  * given time for a Table B descriptor.*/
 #define MXNAF @MXNAF@
 
+/**
+ * Convert an FXY value from its bit-wise (integer) representation to its
+ * six-character representation.
+ *
+ * Wraps cadn30() subroutine.
+ *
+ * @param idn - Bit-wise representation of FXY value.
+ * @param adn - FXY value.
+ * @param adn_str_len - Length of adn string.
+ *
+ * @author J. Ator @date 2004-08-18
+ */
+void cadn30_f(int idn, char *adn, int adn_str_len);
+
+/**
+ * Get the next index for storing an entry within an internal DX BUFR table.
+ *
+ * Wraps igetntbi() function.
+ *
+ * @param lun - File ID.
+ * @param table_type - Type of internal DX BUFR table ('A', 'B', or 'D').
+ *
+ * @return Next available index within table_type.
+ *
+ * @author J.Ator @date 2009-03-23
+ */
+int igetntbi_f(int lun, char *table_type);
+
+/**
+ * Decode the scale factor, reference value, bit width, and units from a Table B
+ * mnemonic definition.
+ *
+ * Wraps elemdx() subroutine.
+ *
+ * @param card - mnemonic definition card.
+ * @param lun - File ID.
+ *
+ * @author J.Ator @date 2003-11-04
+ */
+void elemdx_f(char *card, int lun);
+
+/**
+ * Search for a Table B or Table D descriptor within the internal DX BUFR tables.
+ *
+ * Wraps numtbd() subroutine.
+ *
+ * @param lun - File ID.
+ * @param idn - Bit-wise representation of FXY value.
+ * @param nemo - Mnemonic.
+ * @param nemo_str_len - Length of nemo string.
+ * @param tab - Type of internal DX BUFR table ('B', or 'D').
+ * @param iret - Positional index of idn within Table B or D, or 0 if not found.
+ *
+ * @author J.Ator @date 2003-11-04
+ */
+void numtbd_f(int lun, int idn, char *nemo, int nemo_str_len, char *tab, int *iret);
+
 /*
 ** On certain operating systems, the FORTRAN compiler appends an underscore
 ** to subprogram names in its object namespace.  Therefore, on such systems,
@@ -63,15 +118,11 @@ int icvidx(int ii, int jj, int numjj);
 #define bort       bort_      /**< bort function. */
 #define bort_exit  bort_exit_ /**< exit function. */
 #define bvers      bvers_     /**< bvers function. */
-#define cadn30     cadn30_    /**< cadn30 function. */
-#define closbf     closbf_    /**< closbf function. */
 #define cmpmsg     cmpmsg_    /**< cmpmsg function. */
-#define elemdx     elemdx_    /**< elemdx function. */
 #define gets1loc   gets1loc_  /**< gets1loc function. */
 #define ibfms      ibfms_     /**< ibfms function. */
 #define ichkstr    ichkstr_   /**< ichkstr function. */
 #define ifxy       ifxy_      /**< ifxy function. */
-#define igetntbi   igetntbi_  /**< igetntbi function. */
 #define igettdi    igettdi_   /**< igettdi function. */
 #define imrkopr    imrkopr_   /**< imrkopr function. */
 #define ipkm       ipkm_      /**< ipkm function. */
@@ -79,11 +130,6 @@ int icvidx(int ii, int jj, int numjj);
 #define istdesc    istdesc_   /**< istdesc function. */
 #define iupb       iupb_      /**< iupb function. */
 #define iupm       iupm_      /**< iupm function. */
-#define maxout     maxout_    /**< maxout function. */
-#define nemtab     nemtab_    /**< nemtab function. */
-#define nemtbb     nemtbb_    /**< nemtbb function. */
-#define nummtb     nummtb_    /**< nummtb function. */
-#define numtbd     numtbd_    /**< numtbd function. */
 #define openmb     openmb_    /**< openmb function. */
 #define pktdd      pktdd_     /**< pktdd function. */
 #define restd      restd_     /**< restd function. */
@@ -147,26 +193,6 @@ void bort( char *str, size_t s1 );
 void bvers( char *cverstr, size_t s1 );
 
 /**
- * Wraps cadn30() subroutine.
- *
- * @param idn - Bit-wise representation of FXY value.
- * @param adn - FXY value.
- * @param s1 - Extra C-Fortran interface argument containing length of adn variable.
- *
- * @author J.Ator @date 2004-08-18
- */
-void cadn30( f77int *idn, char *adn, size_t s1 );
-
-/**
- * Wraps closbf() subroutine.
- *
- * @param lunit - Fortran logical unit number for BUFR file.
- *
- * @author J.Ator @date 2003-11-04
- */
-void closbf( f77int *lunit );
-
-/**
  * Wraps cmpmsg() subroutine.
  *
  * @param cf - Flag indicating whether future BUFR output messages are to be compressed.
@@ -175,17 +201,6 @@ void closbf( f77int *lunit );
  * @author J.Ator @date 2005-03-09
  */
 void cmpmsg( char *cf, size_t s1 );
-
-/**
- * Wraps elemdx() subroutine.
- *
- * @param card - mnemonic definition card.
- * @param lun - I/O stream index into internal arrays.
- * @param s1 - Extra C-Fortran interface argument containing length of card variable.
- *
- * @author J.Ator @date 2003-11-04
- */
-void elemdx( char *card, f77int *lun, size_t s1 );
 
 /**
  * Wraps gets1loc() subroutine.
@@ -242,19 +257,6 @@ f77int ichkstr ( char *str, char *chr, f77int *n, size_t s1, size_t s2 );
  * @author J.Ator @date 2003-11-04
  */
 f77int ifxy( char *adsc, size_t s1 );
-
-/**
- * Wraps igetntbi() function.
- *
- * @param lun - I/O stream index into internal arrays.
- * @param ctb - Type of internal DX BUFR table.
- * @param s1 - Extra C-Fortran interface argument containing length of ctb variable.
- *
- * @return Next available index within ctb.
- *
- * @author J.Ator @date 2009-03-23
- */
-f77int igetntbi( f77int *lun, char *ctb, size_t s1 );
 
 /**
  * Wraps igettdi() function.
@@ -349,62 +351,6 @@ f77int iupb( f77int *mbay, f77int *nbyt, f77int *nbit );
  * @author J.Ator @date 2003-11-04
  */
 f77int iupm( char *cbay, f77int *nbits, size_t s1 );
-
-/**
- * Wraps maxout() subroutine.
- *
- * @param max0 - New maximum length for all BUFR messages written to output.
- *
- * @author J.Ator @date 2003-11-04
- */
-void maxout( f77int *max0 );
-
-/**
- * Wraps nemtab() subroutine.
- *
- * @param lun - I/O stream index into internal arrays.
- * @param nemo - Mnemonic.
- * @param idn - Bit-wise representation of FXY value for nemo.
- * @param tab - Table type associated with nemo.
- * @param iret - Return code.
- * @param s1 - Extra C-Fortran interface argument containing length of nemo variable.
- * @param s2 - Extra C-Fortran interface argument containing length of tab variable.
- *
- * @author J.Ator @date 2003-11-04
- */
-void nemtab( f77int *lun, char *nemo, f77int *idn, char *tab, f77int *iret, size_t s1, size_t s2 );
-
-/**
- * Wraps nemtbb() subroutine.
- *
- * @param lun - I/O stream index into internal arrays.
- * @param itab - Index within internal Table B.
- * @param unit - Units of descriptor.
- * @param iscl - Scale factor of descriptor.
- * @param iref - Reference value of descriptor.
- * @param ibit - Bit width of descriptor.
- * @param s1 - Extra C-Fortran interface argument containing length of unit variable.
- *
- * @author J.Ator @date 2003-11-04
- */
-void nemtbb( f77int *lun, f77int *itab, char *unit, f77int *iscl, f77int *iref, f77int *ibit, size_t s1 );
-
-void nummtb( f77int *idn, char *tab, f77int *ipt );
-
-/**
- * Wraps numtbd() subroutine.
- *
- * @param lun - I/O stream index into internal arrays.
- * @param idn - Bit-wise representation of FXY value for nemo.
- * @param nemo - Mnemonic.
- * @param tab - Table type associated with nemo.
- * @param iret - Return code.
- * @param s1 - Extra C-Fortran interface argument containing length of nemo variable.
- * @param s2 - Extra C-Fortran interface argument containing length of tab variable.
- *
- * @author J.Ator @date 2003-11-04
- */
-void numtbd( f77int *lun, f77int *idn, char *nemo, char *tab, f77int *iret, size_t s1, size_t s2 );
 
 /**
  * Wraps openmb() subroutine.
