--- a/utils/debufr.c.in
+++ b/utils/debufr.c.in
@@ -168,15 +168,13 @@ int main( int argc, char *argv[ ] ) {
 
     int ch;
 
-    unsigned short ii;
-
     char basic = 'N';
     char forcemt = 'N';
     char cfms = 'Y';
     char io = 'r';
     char tbldir_default[500] =
             "@MASTER_TABLE_DIR_C@";
-    char bvstr[9] = "        ";
+    char bvstr[9];
 
     char *ofile = NULL;
     char *tbldir = NULL;
@@ -194,14 +192,7 @@ int main( int argc, char *argv[ ] ) {
     while ( ( ch = getopt ( argc, argv, "vhbcmo:t:f:p:" ) ) != EOF ) {
         switch ( ch ) {
             case 'v':
-                bvers ( bvstr, sizeof(bvstr) );
-                /* append a trailing NULL to bvstr for printf */
-                for ( ii = 0; ii < sizeof(bvstr); ii++ ) {
-                    if ( ( bvstr[ii] != '.' ) && ( !isdigit(bvstr[ii]) ) ) {
-                        bvstr[ii] = '\0';
-                        break;
-                    }
-                }
+                bvers_f( bvstr, 9 );
                 printf( "This is debufr v4.0.0, built with NCEPLIBS-bufr v%s\n", bvstr );
                 return 0;
             case 'h':
