--- a/src/bfrini.f90.in
+++ b/src/bfrini.f90.in
@@ -3,7 +3,7 @@
 !> @authors J. Woollen J. Ator @date 1994-01-06
 
 !> Initialize numerous global variables and arrays
-!> within internal modules and COMMON blocks throughout the BUFRLIB
+!> within internal modules and COMMON blocks throughout the NCEPLIBS-bufr
 !> software.
 !>
 !> This subroutine isn't normally called directly by any application
